--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,6 +8,16 @@
   "description": "Classifica e partite del torneo LeoSì Halloween, sempre aggiornate!",
   "icons": [
     {
+      "src": "/logo-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/logo-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
       "src": "/logo.ico",
       "sizes": "48x48 72x72 96x96 128x128 256x256 512x512",
       "type": "image/x-icon"
